Bug 1692720 - Don't force extension for office mime types. r=Gijs

I am not conviced that we have all the correct MIME types and extensions here.
It also extremely hard to figure out what the correct information is.
We should drop this.

Differential Revision: https://phabricator.services.mozilla.com/D105358